--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Les_Pitonneux</string>
+    <string name="app_name">$ les_pitonneux█</string>
 </resources>
